overflow fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -486,8 +486,8 @@ opacity: 1; /* Firefox */
 .relative {
     position: relative;
 }
-.overflow-x {
-    overflow-x: hidden;
+.no-overflow {
+    overflow: hidden;
 }
 
 .rise{
